# test-gtest

./: CMakeLists.txt  main.cpp
include/: my_class.cc  my_class3.h
include/mock/: my_class3_mock.h
tests/: test.cc
tests/include/: my_class.test.cc
